; ModuleID = '/home/carl/AnghaBench/tg/extr_interface.c_do_safe_quit.c'
source_filename = "/home/carl/AnghaBench/tg/extr_interface.c_do_safe_quit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.command = type { i32 }
%struct.arg = type { i32 }
%struct.in_ev = type { i32 }

@daemonize = common dso_local global i64 0, align 8
@BEV_EVENT_EOF = common dso_local global i32 0, align 4
@safe_quit = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @do_safe_quit(%struct.command* %0, i32 %1, %struct.arg* %2, %struct.in_ev* %3) #0 {
  %5 = alloca %struct.command*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.arg*, align 8
  %8 = alloca %struct.in_ev*, align 8
  store %struct.command* %0, %struct.command** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.arg* %2, %struct.arg** %7, align 8
  store %struct.in_ev* %3, %struct.in_ev** %8, align 8
  %9 = load i64, i64* @daemonize, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %18

11:                                               ; preds = %4
  %12 = load %struct.in_ev*, %struct.in_ev** %8, align 8
  %13 = getelementptr inbounds %struct.in_ev, %struct.in_ev* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @BEV_EVENT_EOF, align 4
  %16 = load %struct.in_ev*, %struct.in_ev** %8, align 8
  %17 = call i32 @event_incoming(i32 %14, i32 %15, %struct.in_ev* %16)
  br label %18

18:                                               ; preds = %11, %4
  store i32 1, i32* @safe_quit, align 4
  ret void
}

declare dso_local i32 @event_incoming(i32, i32, %struct.in_ev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
